Added submodule of project ft_irc

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "mini-le-shell"]
 	path = mini-le-shell
 	url = git@github.com:brkncookie/mini-le-shell.git
+[submodule "ft_irc"]
+	path = ft_irc
+	url = git@github.com:brkncookie/ft_irc.git
