--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "so_long"]
 	path = so_long
 	url = git@github.com:brkncookie/so_long.git
+[submodule "push_swap"]
+	path = push_swap
+	url = git@github.com:brkncookie/push_swap.git
