--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "push_swap"]
 	path = push_swap
 	url = git@github.com:brkncookie/push_swap.git
+[submodule "philosophers"]
+	path = philosophers
+	url = git@github.com:brkncookie/Philosophers.git
