Added submodule of project inception

--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "cpp_modules"]
 	path = cpp_modules
 	url = git@github.com:brkncookie/CPPMOD.git
+[submodule "inception"]
+	path = inception
+	url = git@github.com:brkncookie/inception.git
