Added submodule of project ft_transcendence

--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "inception"]
 	path = inception
 	url = git@github.com:brkncookie/inception.git
+[submodule "ft_transcendence"]
+	path = ft_transcendence
+	url = git@github.com:brkncookie/ft_transcendence.git
