--- a/.gitmodules
+++ b/.gitmodules
@@ -34,3 +34,6 @@
 [submodule "simpleloggingscript"]
 	path = simpleloggingscript
 	url = git@github.com:brkncookie/SimpleLogginScript.git
+[submodule "ft_printf"]
+	path = ft_printf
+	url = git@github.com:brkncookie/ft_printf.git
