--- a/.gitmodules
+++ b/.gitmodules
@@ -37,3 +37,6 @@
 [submodule "ft_printf"]
 	path = ft_printf
 	url = git@github.com:brkncookie/ft_printf.git
+[submodule "get_next_line"]
+	path = get_next_line
+	url = git@github.com:brkncookie/get_next_line.git
