--- a/.gitmodules
+++ b/.gitmodules
@@ -40,3 +40,6 @@
 [submodule "get_next_line"]
 	path = get_next_line
 	url = git@github.com:brkncookie/get_next_line.git
+[submodule "libft"]
+	path = libft
+	url = git@github.com:brkncookie/libft.git
